--- a/starter/css/style.css
+++ b/starter/css/style.css
@@ -80,16 +80,25 @@ header h1 {
 
 .page-wrapper {
   display: grid;
+  grid-template-columns: 25% 75%;
+  grid-template-rows: 300px 700px 200px;
+  grid-template-areas:
+    "about about"
+    "work work"
+    "contact contact";
 }
 
 #about {
+  grid-area: about;
   background-color: blue;
 }
 
 #work {
+  grid-area: work;
   background-color: red;
 }
 
 #contact {
+  grid-area: contact;
   background-color: yellow;
 }
