--- a/starter/css/style.css
+++ b/starter/css/style.css
@@ -23,17 +23,30 @@ p {
   margin: 0;
 }
 
+html {
+  height: 150%;
+}
+
+body {
+  padding: 0 10%;
+  background-color: #242629;
+}
+
+/*Style for header element*/
 .header {
   background-color: #16161a;
   color: #fffffe;
   padding: 15px 0;
 }
 
+/*Styles for nav bar and its elements within */
+
 .nav-bar {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  margin: 1% 2%;
 }
 
 .nav-bar h1 {
@@ -52,14 +65,20 @@ p {
 
 .nav-links p {
   padding: 0 20px;
+  font-size: 1.5rem;
+  color: #94a1b2;
+}
+.nav-links p a {
+  text-decoration: none;
 }
 
+/*Styles for banner section */
 .hero-banner {
   background-image: url(../images/02-hero-bg.jpg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  height: 300px;
+  height: 18.75rem;
   position: relative;
 }
 
@@ -75,19 +94,19 @@ p {
   padding: 0 10px;
 }
 
+/* CSS Grid container within main element */
 .page-wrapper {
   display: grid;
-  grid-template-columns: 25% 75%;
-  grid-template-rows: 300px 800px 100px;
+  grid-template-columns: 1fr 5fr;
+  grid-template-rows: 2fr 8fr 1fr;
+  gap: 1.5rem;
+  padding: 1.5rem;
   grid-template-areas:
     "about-heading about "
     "work-heading work "
     "contact-heading contact";
-  justify-content: space-evenly;
-  align-items: stretch;
-  row-gap: 10px;
-  column-gap: 10px;
-  padding: 15px;
+  height: 150vh;
+  background-color: #fffffe;
 }
 
 .about-heading {
@@ -120,17 +139,19 @@ p {
   background-color: darkgreen;
 }
 
+/*Grid container div within work section */
 .work-content {
   display: grid;
+  height: 100%;
+
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 350px 200px 200px;
-  row-gap: 10px;
-  column-gap: 10px;
-  padding: 15px;
+  grid-template-rows: 8fr 3fr 3fr;
   grid-template-areas:
     "project-1 project-1"
     "project-2 project-3"
     "project-4 project-5";
+  gap: 10px;
+  padding: 10px;
 }
 
 .project-1 {
