amended CSS stylesheet and added media queries to make website responsive

--- a/starter/css/style.css
+++ b/starter/css/style.css
@@ -17,170 +17,376 @@ h4,
 h5,
 h6 {
   margin: 0;
+  padding: 0;
 }
 
 p {
   margin: 0;
+  padding: 0;
 }
+
+/*Font Styles*/
 
 html {
   height: 150%;
 }
 
 body {
-  padding: 0 10%;
-  background-color: #242629;
+  overflow-x: hidden;
+  max-width: 100%;
+  height: 100%;
 }
 
-/*Style for header element*/
+/*Navigation Section*/
+/*----------------------------------------------------------*/
+
 .header {
-  background-color: #16161a;
-  color: #fffffe;
-  padding: 15px 0;
+  margin-left: 0;
+  padding: 2% 2% 2% 0;
+  overflow-x: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: darkslategrey;
 }
-
-/*Styles for nav bar and its elements within */
-
 .nav-bar {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: center;
-  margin: 1% 2%;
-}
-
-.nav-bar h1 {
-  font-weight: 500;
-  background-color: #7f5af0;
-  padding: 0 20px;
 }
 
 .nav-links {
   display: flex;
   flex-direction: row;
-  align-items: center;
   justify-content: space-evenly;
-  margin-right: 50px;
+  padding-right: 2%;
 }
-
 .nav-links p {
-  padding: 0 20px;
-  font-size: 1.5rem;
-  color: #94a1b2;
-}
-.nav-links p a {
-  text-decoration: none;
+  padding: 0 0.8rem;
 }
 
-/*Styles for banner section */
+.nav-bar h1 {
+  margin-left: 0;
+  background-color: lightseagreen;
+  padding: 0 2.5% 0 5%;
+}
+
+/*Banner Section*/
+/*----------------------------------------------------------*/
 .hero-banner {
+  overflow: hidden;
+
   background-image: url(../images/02-hero-bg.jpg);
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  height: 18.75rem;
+  height: 10rem;
   position: relative;
 }
 
-.hero-banner div {
-  display: inline-block;
+.hero-banner-title {
   position: absolute;
-  bottom: 20px;
-  right: 30px;
+  bottom: 1rem;
+  right: 0rem;
+  color: aliceblue;
   background-color: lightseagreen;
+  padding: 0 1rem;
 }
 
-.hero-banner div h2 {
-  padding: 0 10px;
-}
-
-/* CSS Grid container within main element */
+/*Main Page Section*/
+/*----------------------------------------------------------*/
 .page-wrapper {
+  overflow: hidden;
+  max-width: 100%;
+  height: 100%;
   display: grid;
-  grid-template-columns: 1fr 5fr;
-  grid-template-rows: 2fr 8fr 1fr;
-  gap: 1.5rem;
-  padding: 1.5rem;
-  grid-template-areas:
-    "about-heading about "
-    "work-heading work "
-    "contact-heading contact";
-  height: 150vh;
-  background-color: #fffffe;
-}
-
-.about-heading {
-  grid-area: about-heading;
-  background-color: lightblue;
-}
-
-.work-heading {
-  grid-area: work-heading;
-  background-color: lightcoral;
-}
-
-.contact-heading {
-  grid-area: contact-heading;
-  background-color: lightgreen;
+  grid-template-columns: 1fr;
+  grid-template-rows: 4fr 9fr 1fr;
+  grid-template-areas: "about" "work" "contact";
+  padding: 0.6rem;
+  row-gap: 1.5rem;
 }
 
 #about {
   grid-area: about;
-  background-color: darkblue;
+}
+
+#about-content-area {
+  padding: 0.6rem;
 }
 
 #work {
   grid-area: work;
-  background-color: darkred;
 }
 
 #contact {
   grid-area: contact;
-  background-color: darkgreen;
 }
 
-/*Grid container div within work section */
-.work-content {
+.page-section {
   display: grid;
-  height: 100%;
+  grid-template-columns: 20% 80%;
+  grid-template-rows: 1fr;
+  grid-template-areas: "grid-subheading" "content-areas";
+  column-gap: 0.6rem;
+}
 
+.grid-subheading {
+  padding: 10% 10% 0 0;
+  text-align: right;
+  border-right: 2px solid lightseagreen;
+}
+
+/*Project Grid Section*/
+/*----------------------------------------------------------*/
+.work-content {
+  max-width: 100%;
+  height: 100%;
+  display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 8fr 3fr 3fr;
+  grid-template-rows: 6fr 1.5fr 1.5fr;
   grid-template-areas:
     "project-1 project-1"
     "project-2 project-3"
     "project-4 project-5";
-  gap: 1.5rem;
-  padding: 1.5rem;
+  column-gap: 0.6rem;
+  row-gap: 0.6rem;
+  padding: 0.6rem;
+}
+
+.project-grid-styles {
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  border: 2px solid lightseagreen;
 }
 
 .project-1 {
   grid-area: project-1;
-  background-color: white;
+  min-height: 0px;
+  background-image: url(../images/02-portfolio-4.jpg);
 }
-
 .project-2 {
   grid-area: project-2;
-  background-color: white;
+  min-height: 0px;
+  background-image: url(../images/02-portfolio-1.jpg);
 }
-
 .project-3 {
   grid-area: project-3;
-  background-color: white;
+  min-height: 0px;
+  background-image: url(../images/02-portfolio-2.jpg);
 }
-
 .project-4 {
   grid-area: project-4;
-  background-color: white;
+  min-height: 0px;
+  background-image: url(../images/02-portfolio-3.jpg);
 }
-
 .project-5 {
   grid-area: project-5;
-  background-color: white;
+  min-height: 0px;
+  background-image: url(../images/02-run-buddy.jpg);
 }
 
-#contact {
+/*Contact section*/
+/*----------------------------------------------------------*/
+#contact-content-area {
   display: flex;
-  justify-content: space-evenly;
+  flex-direction: row;
+  justify-content: center;
   align-items: center;
+}
+
+.contact-links {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.contact-links p {
+  /* display: inline-block; */
+  margin: 0 0.62rem;
+  padding: 0.62rem;
+}
+
+/*Media queries for mobile users display screen size 300px*/
+/*----------------------------------------------------------*/
+@media only screen and (max-width: 300px) {
+  .nav-bar {
+    display: flex;
+    flex-direction: column;
+
+    align-items: center;
+  }
+
+  .nav-bar h1 {
+    margin-bottom: 1rem;
+    width: 100%;
+    text-align: center;
+  }
+
+  .nav-links {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0;
+    text-align: center;
+  }
+
+  .nav-links p {
+    padding: 0.5rem 0;
+  }
+
+  .nav-bar h1 {
+    background-color: lightseagreen;
+    padding: 0 1.5rem;
+  }
+
+  .hero-banner-title {
+    position: absolute;
+    /* bottom: 1rem;
+
+    right: 5rem; */
+    color: aliceblue;
+    background-color: lightseagreen;
+    /* padding: 0 1rem; */
+  }
+
+  .page-section {
+    display: grid;
+    max-width: 100%;
+    grid-template-columns: 1fr;
+    grid-template-rows: 0.15fr 3fr;
+    grid-template-areas:
+      "grid-subheading"
+      "content-areas";
+  }
+
+  .grid-subheading {
+    padding: 0;
+    text-align: center;
+    border-right: none;
+    border-bottom: 2px solid lightseagreen;
+  }
+
+  .work-content {
+    padding-top: 10%;
+    display: grid;
+    max-width: 100%;
+    /* max-height: 80%; */
+    grid-template-columns: 1fr;
+    grid-template-rows: 1.5fr 1fr 1fr 1fr 1fr;
+    grid-template-areas:
+      "project-1"
+      "project-2"
+      "project-3"
+      "project-4"
+      "project-5";
+  }
+
+  /*Contact me at 300px*/
+  #contact-content-area {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .contact-links {
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
+  }
+}
+
+/*Media queries for mobile users display screen size 600px*/
+/*----------------------------------------------------------*/
+
+@media only screen and (max-width: 600px) {
+  .header {
+    padding: 2% 0 0;
+  }
+
+  .nav-bar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .nav-bar h1 {
+    padding: 0;
+    margin-bottom: 1rem;
+    width: 100%;
+    text-align: center;
+  }
+
+  .nav-links {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0;
+    text-align: center;
+  }
+
+  .nav-links p {
+    padding: 0.5rem 0;
+  }
+
+  .nav-bar h1 {
+    background-color: lightseagreen;
+    padding: 0 1.5rem;
+  }
+
+  .hero-banner-title {
+    position: absolute;
+    bottom: 1rem;
+
+    right: 0rem;
+    color: aliceblue;
+    background-color: lightseagreen;
+    padding: 0 1rem;
+  }
+
+  .page-section {
+    display: grid;
+    max-width: 100%;
+    grid-template-columns: 1fr;
+    grid-template-rows: 0.15fr 3fr;
+    grid-template-areas:
+      "grid-subheading"
+      "content-areas";
+  }
+
+  .grid-subheading {
+    padding: 0;
+    text-align: center;
+    border-right: none;
+    border-bottom: 2px solid lightseagreen;
+  }
+
+  .grid-subheading h2 {
+    margin: 0 auto;
+  }
+
+  .work-content {
+    padding-top: 10%;
+    display: grid;
+    max-width: 100%;
+    /* max-height: 80%; */
+    grid-template-columns: 1fr;
+    grid-template-rows: 1.5fr 1fr 1fr 1fr 1fr;
+    grid-template-areas:
+      "project-1"
+      "project-2"
+      "project-3"
+      "project-4"
+      "project-5";
+  }
+
+  /*Contact me at 600px*/
+  #contact-content-area {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .contact-links {
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
+  }
 }
